hphp/test/slow/continue_statement/zero.php.expectf
HipHop Fatal error: 'continue' operator accepts only positive numbers in %s/test/slow/continue_statement/zero.php on line 5
